Fix: Add requires-login class to history and analysis buttons

--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
                         </div>
                         <h5 class="card-title">历史记录</h5>
                         <p class="card-text">查看历史测评记录</p>
-                        <button class="btn btn-info text-white" onclick="viewHistory()">查看记录</button>
+                        <button class="btn btn-info text-white requires-login" onclick="viewHistory()">查看记录</button>
                     </div>
                 </div>
             </div>
@@ -64,7 +64,7 @@
                         </div>
                         <h5 class="card-title">数据分析</h5>
                         <p class="card-text">查看测评数据分析</p>
-                        <button class="btn btn-warning text-white" onclick="viewAnalysis()">查看分析</button>
+                        <button class="btn btn-warning text-white requires-login" onclick="viewAnalysis()">查看分析</button>
                     </div>
                 </div>
             </div>
