--- a/public/user_center.html
+++ b/public/user_center.html
@@ -160,6 +160,30 @@
                         <dd class="col-sm-9"><span id="userUpdatedAt"></span></dd>
                     </dl>
                     <hr>
+                    
+                    <!-- **** 新增：密码修改表单 **** -->
+                    <div id="passwordChangeSection" class="mt-4">
+                        <h5 class="card-title mb-3">修改密码</h5>
+                        <form id="passwordChangeForm">
+                            <div class="mb-3">
+                                <label for="currentPassword" class="form-label">当前密码</label>
+                                <input type="password" class="form-control" id="currentPassword" required>
+                            </div>
+                            <div class="mb-3">
+                                <label for="newPassword" class="form-label">新密码</label>
+                                <input type="password" class="form-control" id="newPassword" required minlength="6">
+                            </div>
+                            <div class="mb-3">
+                                <label for="confirmNewPassword" class="form-label">确认新密码</label>
+                                <input type="password" class="form-control" id="confirmNewPassword" required minlength="6">
+                            </div>
+                            <div id="passwordChangeAlert" class="alert d-none" role="alert"></div>
+                            <button type="submit" id="changePasswordButton" class="btn btn-primary"><i class="bi bi-key me-2"></i>确认修改</button>
+                        </form>
+                    </div>
+                    <!-- **** 结束新增 **** -->
+                    
+                    <hr>
                     <div id="userActions">
                         <button id="logoutButton" class="btn btn-outline-danger"><i class="bi bi-box-arrow-right me-2"></i>退出登录</button>
                         <!-- 其他按钮可以在这里添加 -->
