--- a/user_center.html
+++ b/user_center.html
@@ -93,7 +93,7 @@
                         <!-- 登录表单 (默认显示) -->
                         <form id="loginForm">
                             <div class="mb-3">
-                                <label for="loginEmail" class="form-label">邮箱</label>
+                                <label for="loginEmail" class="form-label">用户名</label>
                                 <input type="email" class="form-control" id="loginEmail" required>
                             </div>
                             <div class="mb-3">
